Staging (#23)
* POM update - role_manager version

* POM version update

* Merged from staging for next release (#20) (#21)

* POM update - role_manager version

* POM version update

---------

Co-authored-by: Alice Boizet <alice.boizet@cirad.fr>

* Callsets multi proj (#22)

* Minor change

* Added number of samples to DB summary description

* Minor change

* Remove pj and rn fields from GenotypingSample and update queries to get callsets from individuals

* Implementing multi-project UI + addition of callset entity

* Fixed BrAPI v1 import (now compatible with Gigwa CallSets)

* CallSets now embedded in Samples

* Fixing errors due to addition of CallSet level

* Ready for testing

* Minor change

* Incremented version number

---------

Co-authored-by: Alice Boizet <alice.boizet@cirad.fr>

* Removed commented-out dependency

---------

Co-authored-by: Alice Boizet <alice.boizet@cirad.fr>